# causality

./: .gitignore  pyproject.toml  setup.cfg  setup.py
causality/: util.py
causality/analysis/: dataframe.py
causality/estimation/: README.md  adjustments.py  nonparametric.py  parametric.py
causality/inference/independence_tests/: __init__.py
causality/inference/search/: __init__.py
tests/unit/: __init__.py  nonparametric.py  parametric.py  settings.py  test_IC.py  test_cit.py
tests/unit/data/: build_X.py
